--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
